<resources>
    <string name="app_name">ARKNews</string>
    <string name="theme">Appearance</string>
    <string name="settings">Settings</string>
    <string name="notify">Notification</string>
    <string name="settings_faq">Frequently Asked Questions</string>
    <string name="contact_us">Contact Us</string>
    <string name="auto_deletion">Set Time for Auto-deletion</string>
    <string name="language">Language</string>
    <string name="category">Category Preference</string>
    <string name="dark">Dark Mode</string>
    <string name="light">Light Mode</string>
    <string name="theme_dialog_text_message">Choose your preferred appearance:</string>
    <string name="language_dialog_text_message">Choose your preferred language:</string>
    <string name="english">English</string>
    <string name="bangla">বাংলা</string>
    <string name="nepali">नेपाली</string>
    <string name="del_time_day">2 Days</string>
    <string name="del_time_week">A Week</string>
    <string name="del_time_month">A Month</string>
    <string name="auto_del_text_message">This is auto-delete section from where you can set the expiration time, after which older news will be automatically deleted from your internal storage.</string>
    <string name="more_on_your_news">More on your News</string>
    <string name="close">Close</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="project_title">Android Based News App for Fast and Ad-free Experience - ARKNews</string>
    <string name="about_ark">With the advent and spread of new generation mobile devices and the latest technology, the necessity of a real revolution in the media and publishing industry has touched its highest peak. We are being exposed to an excessive amount of information every day that sometimes it’s quite tough to keep a record of those necessary and authentic ones for an individual. Hence, introducing a news app that can provide users real-time access to relevant, prominent and genuine news to keep them up-to-date with the global affairs is a prime concern.\n</string>
    <string name="about_inspiration">- Understanding news management\n- Experiencing to create, maintain and manipulate large database\n- Easy to track relevant information\n</string>
    <string name="inspiration">Inspiration</string>
    <string name="supervisor">Supervisor</string>
    <string name="about_nahid_sir">Md. Nahid Sultan Sir\nAssistant Professor\nDepartment of CSE\nFaculty of CSE\nHSTU</string>
    <string name="select_this_category">Select this category</string>
    <string name="unselect_this_category">Unselect this category</string>
    <string name="favorite_this_channel">Favorite this channel</string>
    <string name="dislike_this_channel">Dislike this channel</string>
    <string name="pin_this_news">Pin this news</string>
    <string name="about_prashant">Prashant Karna\nFaculty of CSE,\nDepartment of CSE, HSTU.\ngithub.com/imprashant98</string>
    <string name="about_karma">Karma Jimpa\nFaculty of CSE,\nDepartment of CSE, HSTU.\ngithub.com/Karmajimba23</string>
    <string name="about_priyanka">Priyanka Roy\nFaculty of CSE,\nDepartment of CSE, HSTU.\ngithub.com/priyan-2020</string>
    <string name="about_tipu">Amrita Das Tipu\nFaculty of CSE,\nDepartment of CSE, HSTU.\ngithub.com/amritoo</string>
    <string name="for_more_queries">"For more Queries, please mail us at: \n👉   newsArkinfo@gmail.com"</string>
    <string name="toolbar_cat">Categories</string>
    <string name="toolbar_fav_channel">Favorite Channels</string>
    <string name="toolbar_history">History</string>
    <string name="notification_message">Turn notification:</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="toolbar_pinned">Pinned News</string>
    <string name="sort_by">Sort By:</string>
    <string name="rate_ark_news">Rate Ark News</string>
    <string name="submit">Submit</string>
    <string name="filter_heading">Filter by</string>
    <string name="choose_channel">Choose channel</string>
    <string name="choose_category">Choose category</string>
    <string name="time">Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="filter">Filter</string>
    <string name="open">Open</string>
    <string name="hide_news">Hide this news</string>
    <string name="copy_link">Copy link</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="rate_us">Rate us</string>
    <string name="delete_all">Delete All</string>
</resources>