<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity">

    <!--  Toolbar  -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
            app:title="@string/settings"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />
    </com.google.android.material.appbar.AppBarLayout>

    <!--  Appearance  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </LinearLayout>

    <!--  Notification  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/toggleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="17dp"
            android:layout_toEndOf="@+id/notify"
            android:gravity="center" />


    </RelativeLayout>

    <!--  Language  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </LinearLayout>

    <!--  Set Time For Auto-deletion  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/auto_deletion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_deletion"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </LinearLayout>

    <!--  Category Selection  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/category_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </LinearLayout>

    <!--  Help  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </LinearLayout>

    <!--  User Manual  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_manual"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </LinearLayout>

</LinearLayout>
